force-app/main/default/objects/AH_SFDC_Source_Control__c/AH_SFDC_Source_Control__c.object-meta.xml
<CustomObject>
    <description>Object that stores information about Apex Classes, Apex Triggers, Visualforce Pages, Visualforce Components</description>
    <label>Salesforce Source Control</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>SFDC Source Control Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Source Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>