force-app/main/default/objects/AH_SFDC_Source_Control__c/fields/Active_Errors__c.field-meta.xml
<CustomField>
    <fullName>Active_Errors__c</fullName>
    <label>Active Errors</label>
    <summaryFilterItems>
        <field>AH_SFDC_Source_Errors__c.IsFixed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>AH_SFDC_Source_Errors__c.Salesforce_Source_Control__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>