force-app/main/default/objects/AH_SFDC_Source_Control__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>