force-app/main/default/objects/AH_SFDC_Source_Control__c/fields/CRC__c.field-meta.xml
<CustomField>
    <fullName>CRC__c</fullName>
    <label>CRC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>