force-app/main/default/objects/AH_SFDC_Source_Control__c/fields/Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>