force-app/main/default/objects/AH_SFDC_Source_Control__c/fields/Salesforce_Link__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Salesforce_ID__c, &quot;View &quot; &amp;  TEXT(Salesforce_Source_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce Link</label>
    <type>Text</type>
</CustomField>