force-app/main/default/objects/AH_SFDC_Source_Control__c/fields/Salesforce_Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Source_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Object that this Salesforce Source Control component relates to</inlineHelpText>
    <label>Salesforce Source Object</label>
    <referenceTo>AH_SFDC_Source_Object__c</referenceTo>
    <relationshipLabel>Salesforce Source Control</relationshipLabel>
    <relationshipName>Salesforce_Source_Control</relationshipName>
    <type>Lookup</type>
</CustomField>