force-app/main/default/objects/AH_SFDC_Source_Control__c/fields/Salesforce_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Source_Type__c</fullName>
    <label>Salesforce Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salesforce_Source_Type</valueSetName>
    </valueSet>
</CustomField>