force-app/main/default/objects/AH_SFDC_Source_Control__c/fields/Source_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Source_Last_Modified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Last Modified</label>
    <type>DateTime</type>
</CustomField>