force-app/main/default/objects/AH_SFDC_Source_Control__c/fields/Source_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Source_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Salesforce_Source_Control</relationshipName>
    <type>Lookup</type>
</CustomField>