force-app/main/default/objects/AH_SFDC_Source_Control__c/fields/Syntax__c.field-meta.xml
<CustomField>
    <fullName>Syntax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Syntax</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>