force-app/main/default/objects/AH_SFDC_Source_Control__c/listViews/Apex_Classes.listView-meta.xml
<ListView>
    <fullName>Apex_Classes</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>IsTestClass__c</columns>
    <columns>State__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active_Errors__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Source_Type__c</field>
        <operation>equals</operation>
        <value>Apex Class</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>notEqual</operation>
        <value>Inactive,Flagged for Deletion,Deleted</value>
    </filters>
    <label>Apex Classes</label>
    <language>en_US</language>
</ListView>