force-app/main/default/objects/AH_SFDC_Source_Control__c/listViews/Apex_Classes_with_Low_Coverage.listView-meta.xml
<ListView>
    <fullName>Apex_Classes_with_Low_Coverage</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Test_Class__c</columns>
    <columns>Test_Class_Name__c</columns>
    <columns>API_Version__c</columns>
    <columns>Percentage_Covered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Source_Type__c</field>
        <operation>equals</operation>
        <value>Apex Class</value>
    </filters>
    <filters>
        <field>IsTestClass__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Percentage_Covered__c</field>
        <operation>lessThan</operation>
        <value>80</value>
    </filters>
    <label>Apex Classes with Low Coverage</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>