force-app/main/default/objects/AH_SFDC_Source_Control__c/listViews/Apex_Test_Classes.listView-meta.xml
<ListView>
    <fullName>Apex_Test_Classes</fullName>
    <columns>NAME</columns>
    <columns>Salesforce_Link__c</columns>
    <columns>API_Name__c</columns>
    <columns>API_Version__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Source_Type__c</field>
        <operation>equals</operation>
        <value>Apex Class</value>
    </filters>
    <filters>
        <field>IsTestClass__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Apex Test Classes</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>