force-app/main/default/objects/AH_SFDC_Source_Control__c/listViews/Apex_Triggers.listView-meta.xml
<ListView>
    <fullName>Apex_Triggers</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>State__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active_Errors__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Source_Type__c</field>
        <operation>equals</operation>
        <value>Apex Trigger</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>notEqual</operation>
        <value>Deleted</value>
    </filters>
    <label>Apex Triggers</label>
    <language>en_US</language>
</ListView>