force-app/main/default/objects/AH_SFDC_Source_Control__c/listViews/Components_Flagged_For_Deletion.listView-meta.xml
<ListView>
    <fullName>Components_Flagged_For_Deletion</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Salesforce_Source_Type__c</columns>
    <columns>IsTestClass__c</columns>
    <columns>API_Version__c</columns>
    <columns>Percentage_Covered__c</columns>
    <columns>Developer_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Flagged for Deletion</value>
    </filters>
    <label>Components Flagged For Deletion</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>