force-app/main/default/objects/AH_SFDC_Source_Control__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>API_Name__c</columns>
    <columns>Salesforce_Source_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Salesforce_Source_Type__c</field>
        <operation>notEqual</operation>
        <value>Process Builder</value>
    </filters>
    <label>Created Today</label>
</ListView>