force-app/main/default/objects/AH_SFDC_Source_Control__c/listViews/Process_Builders.listView-meta.xml
<ListView>
    <fullName>Process_Builders</fullName>
    <columns>NAME</columns>
    <columns>Salesforce_ID__c</columns>
    <columns>API_Name__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active_Errors__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Source_Type__c</field>
        <operation>equals</operation>
        <value>Process Builder</value>
    </filters>
    <label>Process Builders</label>
</ListView>