force-app/main/default/objects/AH_SFDC_Source_Control__c/listViews/Validation_Rules.listView-meta.xml
<ListView>
    <fullName>Validation_Rules</fullName>
    <columns>NAME</columns>
    <columns>Salesforce_Link__c</columns>
    <columns>API_Name__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active_Errors__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Source_Type__c</field>
        <operation>equals</operation>
        <value>Validation Rule</value>
    </filters>
    <label>Validation Rules</label>
</ListView>