force-app/main/default/objects/AH_SFDC_Source_Control__c/listViews/Visualforce_Pages.listView-meta.xml
<ListView>
    <fullName>Visualforce_Pages</fullName>
    <columns>NAME</columns>
    <columns>Salesforce_ID__c</columns>
    <columns>API_Name__c</columns>
    <columns>Label__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active_Errors__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Source_Type__c</field>
        <operation>equals</operation>
        <value>Visualforce Page</value>
    </filters>
    <label>Visualforce Pages</label>
</ListView>